--- a/README.Rmd
+++ b/README.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "README test"
-author: "Rodrigo Motoyama"
-date: "8/9/2020"
-output: html_document
+output: github_document
 ---
 
-#TEST
+<!-- README.md is generated from README.Rmd. Please edit that file -->
+
+
+# TEST
